@@ -1,3 +1,12 @@
+2008-08-05  Joe English  <jenglish@users.sourceforge.net>
+
+	* unix/tclUnixChan.c: Streamline async connect logic [Patch 1994512]
+
+2008-08-05  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclExecute.c: Fix for [Bug 2038069] by dgp.
+	* tests/execute.test:
+
 2008-08-04  Don Porter  <dgp@users.sourceforge.net>S
 
 	[dgp-refactor branch]
